--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 <h1>Who am I?</h1>
-<p>Hi there! I'm Bhoomika Agarwal and I love coding, teaching, poetry, origami and reading books. I express my creative side through artwork, coding and origami. I put down my emotions by letting them flow out in the form of ink from my mind onto paper, forming poetry and blog posts on their way. Check out my poetry blog <a href="https://myriadpoems.blogspot.com/">Versification</a> if you'd like a look into my soul. As a programmer, I believe in the <a href="http://threevirtues.com/">three virtues</a> defined by Larry Wall:
+<p>Hi there! I'm Bhoomika Agarwal and I love coding, teaching, poetry, origami and reading books. I express my creative side through artwork, coding and origami. I put down my emotions by letting them flow out in the form of ink from my mind onto paper, forming poetry and blog posts on their way. Check out my poetry blog <a href="https://myriadpoems.blogspot.com/">Versification</a> if you'd like a look into my soul. As a programmer, I believe in the <a href="https://thethreevirtues.com/">three virtues</a> defined by Larry Wall:
 <ol>
 <li>Laziness</li> 
 <li>Impatience</li>
@@ -11,10 +11,10 @@ title: Home
 </ol>
 </p>
 
-<p>My work is fueled by a combination of these three virtues, while the rest of my life is fueled by the principles set down in <a href="http://threevirtues.com/">The Zen of Python</a> by Tim Peters. In my opinion, it is the most beautiful poem ever that sets down design guidelines for code that can be extended to life. 
+<p>My work is fueled by a combination of these three virtues, while the rest of my life is fueled by the principles set down in <a href="https://peps.python.org/pep-0020/">The Zen of Python</a> by Tim Peters. In my opinion, it is the most beautiful poem ever that sets down design guidelines for code that can be extended to life. 
 </p>
 
-<p>I'm currently pursuing Masters in the field of Computer Science - Data Science track in the domain of Educational technologies at TU Delft. I believe that people might lie but data does not. Dr. W. Edwards Deming rightly said - "Without data, you are just another person with an opinion".
+<p>I'm currently pursuing a PhD at the Open University of the Netherlands on the topic "Ethics for Artificial Intelligence in Education". In 2021, I completed my Masters in the field of Computer Science - Data Science track in the domain of Educational technologies at TU Delft. I believe that people might lie but data does not. Dr. W. Edwards Deming rightly said - "Without data, you are just another person with an opinion".
 Since a very young age, I have dreamed of working with technology that brings positive change and has a real-life impact on people’s lives. This was my prime motivation for pursuing my studies in computer science and it continues to drive me till date. </p>
 
 <p>As a coder, I am well versed with programming using Linux flavors and Windows. The programming languages that I have worked with are: Python, Java, C, C++, MySQL, LaTeX, MATLAB and R. I spread my love for Python programming as a co-organizer of <a href="https://amsterdam.pyladies.com/">PyLadies Amsterdam</a>.</p>
